cli/tests/testdata/compat/test_runner/esm.out
running 2 tests from ./compat/test_runner/esm.mjs
Correct assertion ... ok ([WILDCARD])
Failed assertion ... FAILED ([WILDCARD])

failures:

./compat/test_runner/esm.mjs > Failed assertion
AssertionError: Values are not strictly equal:


    [Diff] Actual / Expected


-   10
+   20

    Error.captureStackTrace(this, stackStartFn || stackStartFunction);
          ^
[WILDCARD]

failures:

	./compat/test_runner/esm.mjs
	Failed assertion

test result: FAILED. 1 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Test failed
